test/classes/initializers/parentCall/inBeginOn.comm-none.lm-numa.good
inBeginOn.chpl:4: In initializer:
inBeginOn.chpl:7: error: use of super.init() call in a parallel statement
